<resources>
    <string name="app_name">Find Your Booth</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">10</string>
    <string name="num11">11</string>
    <string name="num12">12</string>
    <string name="num13">13</string>
    <string name="num14">14</string>
    <string name="num15">15</string>
    <string name="num16">16</string>

    <string-array name="gradation_info">
        <item>Spring 2020</item>
        <item>Summer 2020</item>
        <item>Fall 2020</item>
        <item>Spring 2021</item>
        <item>Summmer 2021</item>
        <item>Fall 2021</item>
        <item>Spring 2021</item>
        <item>Summer 2021</item>
        <item>Fall 2021</item>
    </string-array>

    <string-array name="major_info">
        <item>Accounting</item>
        <item>Business</item>
        <item>Computer Science</item>
    </string-array>

</resources>
