<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="#464e64"
    >

    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        >
        <ImageButton
            android:id="@+id/Home"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#d6885f"
            android:gravity="center"
            android:src="@drawable/home"
            android:textColor="#464e64"
            android:textSize="24sp" />
        <TextView
            android:layout_height="35dp"
            android:layout_width="200dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="24sp"
            android:background="#d6885f"
            android:textColor="#FFFFFF"
            android:text="Section A" />

        <Button
            android:id="@+id/nextSection"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#d6885f"
            android:gravity="center"
            android:text="&gt;"
            android:textColor="#464e64"
            android:textSize="24sp" />

    </RelativeLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="450dp"
        android:background="?attr/selectableItemBackground"
        >

        <TableRow
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/b1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num1"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="0dp"

                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num2"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num3"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b4"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num4"
                android:textColor="#464e64"
                android:textSize="30sp" />

        </TableRow>
        <TableRow
            android:id="@+id/tbrow2"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/b12"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num12"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <TextView
                android:layout_width="0dp"

                android:layout_height="100dp"
                android:layout_marginRight="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/greenLight"
                android:text="Booths Recommended for you"
                />


            <Button
                android:id="@+id/b5"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num5"
                android:textColor="#464e64"
                android:textSize="30sp" />


        </TableRow>
        <TableRow
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/b11"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num11"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <TextView
                android:layout_width="0dp"

                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num6"
                android:textColor="#464e64"
                android:textSize="30sp" />

        </TableRow>
        <TableRow
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/b10"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num10"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="0dp"

                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num9"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num8"
                android:textColor="#464e64"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b7"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#d6885f"
                android:gravity="center"
                android:text="@string/num7"
                android:textColor="#464e64"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="match_parent"
        >
        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="1: Motion Industries"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="2: McLeod Software"
                android:textColor="#FFFFFF"/>
            />


        </TableRow>
        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="3: TSYS"
                android:textColor="#FFFFFF"/>
            />
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="4: JB Hunt 360"
                android:textColor="#FFFFFF"/>
            />

        </TableRow>
        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="5: Investor Protection"
                android:textColor="#FFFFFF"/>
            />
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="6: Auburn University"
                android:textColor="#FFFFFF"/>
            />

        </TableRow>

        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            android:textSize="18sp"
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="7: nousys"
                android:textColor="#FFFFFF"/>
            />
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="8: accenture"
                android:textColor="#FFFFFF"/>
            />

        </TableRow>

        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="9: linode"
                android:textColor="#FFFFFF"/>
            />
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="10: Emcor"
                android:textColor="#FFFFFF"/>
            />

        </TableRow>

        <TableRow android:layout_width="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="11: Brooksource"
                android:textColor="#FFFFFF"/>
            />
            <TextView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="12: SiteOne"
                android:textColor="#FFFFFF"/>
            />

        </TableRow>


    </TableLayout>
</LinearLayout>